# HVSeisPy

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yaml
data/Sample data/: AE0220170919181440.txt  AE0220170919181440_nve100.txt  CO5620170908044918_nve100.txt  DM1220170919181440_nve100.txt  KO.KHMN..HNE.D.2023.037.064738.SAC  KO.KHMN..HNN.D.2023.037.064738.SAC  KO.KHMN..HNZ.D.2023.037.064738.SAC  SCT22312-121.txt  TK3126_100.mseed
hvseispy/: IO.py
tests/: example1.py
