[project]
name = "hvseispy"  # Replace with your actual package name
version = "1.1"
description = "Calculates H/V spectral ratio from acceleration data"
authors = [{ name = "Jesús Ochoa", email = "ochoacontrerasjesus8@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
    "obspy",
    "pykooh"
]
